--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <hr/>
-    <div id="display-element"></div>
-    <form>
-      <input id="user-input" type="text">
-      <!-- How do you get this input sent to the pigLatin() function? -->
-      <button onclick="pigLatin()">Translate</button>
-    </form>  
-    <hr/>
+    <div id="text_box">
+      <h1>Itsyay Ipgay AtinLay Imetay!</h1>
+      <div id="display-element"></div>
+      <form>
+        <input id="user-input" type="text" />
+        <!-- How do you get this input sent to the pigLatin() function? -->
+        <button id="" onclick="pigLatin(this)">Translate</button>
+      </form>
+      <textarea
+        name="textInput"
+        id="textInput"
+        cols="30"
+        rows="5"
+        placeholder=""
+      ></textarea>
+    </div>
+    <script src="./main.js"></script>
   </body>
 </html>
