finished @media mobile

--- a/index.html
+++ b/index.html
@@ -4,24 +4,17 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="./main.js"></script>
   </head>
   <body>
     <div id="text_box">
       <h1>Itsyay Ipgay AtinLay Imetay!</h1>
+      <!-- <form> -->
+      <input id="user-input" type="text" placeholder="enter word/words..." />
+      <!-- How do you get this input sent to the pigLatin() function? -->
+      <button id="button" onclick="sentencePigLatin()">Translate!</button>
+      <!-- </form> -->
       <div id="display-element"></div>
-      <form>
-        <input id="user-input" type="text" />
-        <!-- How do you get this input sent to the pigLatin() function? -->
-        <button id="" onclick="pigLatin(this)">Translate</button>
-      </form>
-      <textarea
-        name="textInput"
-        id="textInput"
-        cols="30"
-        rows="5"
-        placeholder=""
-      ></textarea>
     </div>
-    <script src="./main.js"></script>
   </body>
 </html>
