--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <script src="./main.js"></script>
   </head>
   <body>
-    <div id="text_box">
-      <h1>Itsyay Ipgay AtinLay Imetay!</h1>
-      <!-- <form> -->
-      <input id="user-input" type="text" placeholder="enter word/words..." />
-      <!-- How do you get this input sent to the pigLatin() function? -->
-      <button id="button" onclick="sentencePigLatin()">Translate!</button>
-      <!-- </form> -->
-      <div id="display-element"></div>
-    </div>
+    <main>
+      <div id="text_box">
+        <h1>Itsyay Ipgay AtinLay Imetay!</h1>
+        <!-- <form> -->
+        <input id="user-input" type="text" placeholder="enter word/words..." />
+        <!-- How do you get this input sent to the pigLatin() function? -->
+        <button id="button" onclick="sentencePigLatin()">Translate!</button>
+        <!-- </form> -->
+        <div id="display-element"></div>
+      </div>
+    </main>
   </body>
 </html>
